website/style.css
* {
    font-family: pt-sans, sans-serif;
    /*font-family: -apple-system, BlinkMacSystemFont, sans-serif;*/
    overflow-x:hidden;
}
html {
    scroll-behavior: smooth;
}
body {
    margin: auto;
    padding: 0px;
    background-color: white;
    padding-bottom: 20%;
}
h1 {
    color: white;
}
h2 {
    font-size: 200%;
    font-style: italic;
    color: black;
    font-weight: bold;


}
h3 {
    font-size: 200%;
    color: black;

}
h4 {
    font-size: 150%;
    color: black;

}
p {
    font-size: 150%;
    color: black;
}
a {
    text-decoration: none;
    color: rgb(34, 36, 28);
}
footer {
    padding-top: 20%;
    text-align: center;
}
small {
    color: black;
}

/*Start*/
#startscreen {
    text-align: center;  
    font-size: 0; /*getting rid of white bar*/
}

#blurback {
    width: 100%;
    height: 100vh; 
    z-index: -1;
    object-position: 10% 0%;
    object-fit: cover;
}
#myname {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -100%);
    font-size: calc(36px + 6vw);
}
#topemail {
    position: absolute;
    top: 60%;
    left: 50%;
    transform: translate(-50%, 100%);
    
    color: white;
    font-size: 24px;

}
/*Navbar*/
ul#navbar {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: black;
    text-align:center;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.6);
} 
li.navitem {
    display:inline;
}
li.navitem a {
    margin-bottom: -4px;
    display: inline-block;
    text-align: center;
    padding: 14px 20px;
    text-decoration: none;
    transition-duration: 0.8s;
    -webkit-transition-duration: 0.8s;

    color: white;
    font-size: 20px; 
}
.sticky {
    position: fixed;
    top: 0;
    width: 100%;
}

/*Hyperlinks*/
.linked {
    color: rgb(0, 195, 255);
    text-decoration: underline;
}
/*Buttons*/
.button {
    display: block;

    padding: 24px 12px;
    border: 4px solid;
    border-color: rgb(0, 195, 255);
    border-radius: 12px;
    overflow-y: hidden;

    text-align: center;
    font-size: 24px;
    font-weight: bold;
     
    transition-duration: 0.8s;
    -webkit-transition-duration: 0.8s;
}

#sections {
    margin: auto;
    
    
    min-width: 650px;
    max-width: 650px;
}
.section {
    margin-top: 10%;
    margin-bottom: 10%;
}
/*Greeting Buttons*/
#aboutbuttons {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    text-align: center;
    
}
.lihorz {
    display: inline-block;
    padding-left: 5%;
    padding-right: 5%;
}
#githubbut, #linkedinbut, #resume {
    width: 100px;
    height: 40px; 
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 5%;
}
#resume {
    padding-top: 26px;
    height: 38px;
}

.githubimg, #linkedinimg, .hyperimg {
    max-width: 100%;
    max-height: 100%;
}
/*Project Grid*/
.cardarea {
    list-style-type: none;
    text-align: center
}
.card {
    display: inline-block;
    margin: 2%;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
    transition: 0.3s;
    border-radius: 5px;

    width: 45%;
    min-width: 250px;

    transition-duration: 0.4s;
    -webkit-transition-duration: 0.4s;
}
.cardimg {
    border-radius: 5px;
    width: 100%;
    height: 175px;
    margin-left: auto;
    margin-right: auto;
}
.cardbutton {
    list-style-type: none;
    text-align: center;
    
}

.gitlink, .hyperlink {
    display: inline-block;
    width: 75px;
    height: 40px;

    margin-bottom: 3px;
}
.more {
    padding-top: 28px;
    height: 36px;
}
.mail {
    margin-left: auto;
    margin-right: auto;
    width: 120px;
}

/*Hover Animations*/
@media (hover: hover) { 
    li.navitem a:hover {
      background: white;
      color: black;
    }
    .button:hover {
        background-color: rgb(0, 195, 255);
        box-shadow: 0 6px 8px 0 rgba(0,0,0,0.24), 0 8px 25px 0 rgba(0,0,0,0.19);
    }
    #topemail:hover {
        color: black;
    }
    .linked:hover {
        color: rgb(0, 87, 114);
    }
    .card:hover {
        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.4);
    }
    #darkbutton:hover {
        background-color: black;
        color: white;
    }
}

